[package]
name = "rust_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
clap = { version = "4.4.10", features = ["derive"] }
get_if_addrs = "0.5.3"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
tokio = "1.34.0"
walkdir = "2.4.0"
