[package]
name = "rust_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.5"
cbc = "0.1.2"
clap = { version = "4.4.10", features = ["derive"] }
get_if_addrs = "0.5.3"
md5 = "0.7.0"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.17"
rand = "0.8.5"
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
rsa = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
tokio = "1.34.0"
walkdir = "2.4.0"
